<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_profile"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/mIvHead"
       app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:background="@mipmap/ic_launcher_round"/>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mTvName"
        android:layout_margin="25dp"
        android:text="Name"
        app:layout_constraintTop_toBottomOf="@+id/mIvHead"/>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mTvEmail"
        android:layout_margin="25dp"
        android:text="Email"
        app:layout_constraintTop_toBottomOf="@+id/mTvName"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="75dp"
        android:layout_marginTop="76dp"
        android:text="Logout"
        app:layout_constraintTop_toBottomOf="@+id/mTvName"
        tools:layout_editor_absoluteX="93dp" />

    <ImageView
        android:id="@+id/camera"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_camera_alt_24"
        tools:layout_editor_absoluteX="302dp"
        tools:layout_editor_absoluteY="126dp" />

</androidx.constraintlayout.widget.ConstraintLayout>